[package]
name = "pingduck"
version = "0.1.0"
authors = ["Thomas Ritter <thomas.ritter@simplificator.com>"]

[dependencies]
iron = "0.2.6"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.0"
router = "0.1.0"
bodyparser = { git = "https://github.com/iron/body-parser.git" }
persistent = "0.0.9"
